Refactor the command result. Introducing Result interface, to make things easier going forward